[gd_scene load_steps=6 format=3 uid="uid://3cc80imerot0"]

[ext_resource type="Script" path="res://menus/pause_menu.gd" id="1_eeqwu"]
[ext_resource type="Texture2D" uid="uid://jtk28m7gtmmy" path="res://Assets/cogwheel.png" id="2_1lmqr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iqr64"]
bg_color = Color(0.360784, 0.623529, 0.419608, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.121569, 0.513726, 0.243137, 1)
expand_margin_left = 40.0
expand_margin_top = 15.0
expand_margin_right = 40.0
expand_margin_bottom = 15.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_74b5n"]
bg_color = Color(0.121569, 0.513726, 0.243137, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.121569, 0.513726, 0.243137, 1)
expand_margin_left = 40.0
expand_margin_top = 15.0
expand_margin_right = 40.0
expand_margin_bottom = 15.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6duct"]
bg_color = Color(0.121569, 0.513726, 0.243137, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.121569, 0.513726, 0.243137, 1)
expand_margin_left = 40.0
expand_margin_top = 15.0
expand_margin_right = 40.0
expand_margin_bottom = 15.0

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_eeqwu")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 150
alignment = 1

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 60
text = "Game
Paused"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ResumeButton" type="Button" parent="Panel/HBoxContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Resume"

[node name="RestartButton" type="Button" parent="Panel/HBoxContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.941176, 0.941176, 0.941176, 1)
theme_override_colors/font_hover_color = Color(0.941176, 0.941176, 0.941176, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_iqr64")
theme_override_styles/hover = SubResource("StyleBoxFlat_74b5n")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6duct")
text = "Restart"

[node name="Settings" type="Button" parent="."]
offset_left = 416.025
offset_top = 7.0
offset_right = 1039.03
offset_bottom = 655.0
scale = Vector2(0.1, 0.1)
icon = ExtResource("2_1lmqr")
flat = true

[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/GridContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/GridContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
